// proto/message.proto
syntax = "proto3";

option go_package = "./proto"; // This tells protoc where to put generated Go files

package raft_pb; // A package name for your protobuf definitions

// The service definition for inter-client communication
service NodeRegistration {
  rpc RegisterNode (NodeInfo) returns (RegisterResponse);
  rpc GetNodes(Empty) returns (NodeList);
  rpc SendHeartBeat(HearBeatRequest) returns (HearBeatReply);
  rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply);
  rpc RemoveConnection(NodeInfo) returns (RegisterResponse);
  rpc checkRPC(Empty) returns (RegisterResponse);
}

message NodeInfo {
  int32 id = 1;
  string addr = 2;
}

message RegisterResponse {
  string message = 1;
}

message NodeList {
  repeated NodeInfo nodes = 1;
}

message Empty{}

message Signal {
  int32 Term = 1;
  bool flag = 2;
  int32 ind = 3;
}

message RequestVoteArgs {
  string Id = 1;
  int32 Term = 2;
  string Addr = 5;
}

message RequestVoteReply {
  bool vote_granted = 1;
  int32 term=2;
  string votedFor=3;
}


message HearBeatRequest {
  string Id=1;
  int32 Term=2;
  int32 LogInd=3;
  string Add=4;
}


message HearBeatReply {
  bool Flag = 1;
  bool NewLeader = 2;
  int32 Term = 3;
}

message AppendEntriesArgs {
  string message = 1;
  int32 LogInd = 2;
}